# ClusterChatServer

./: CMakeLists.txt  README.md  autobuild.sh
include/: public.hpp
include/server/: ChatServer.hpp  ChatService.hpp
include/server/db/: MySql.hpp
include/server/dbConnPool/: DataBaseConn.hpp  DataBaseConnPool.hpp
include/server/model/: Group.hpp  GroupModel.hpp  GroupUser.hpp  OfflineMessageModel.hpp  User.hpp  UserModel.hpp  friendModel.hpp
include/server/redis/: redis.hpp
include/tools/: Logger.hpp  Timestamp.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  ChatServer.cpp  ChatService.cpp  main.cpp
src/server/db/: MySql.cpp
src/server/dbConnPool/: DataBaseConn.cpp  DataBaseConnPool.cpp  config.json
src/server/model/: GroupModel.cpp  OfflineMessageModel.cpp  UserModel.cpp  friendModel.cpp
src/server/redis/: redis.cpp
